<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hub"
            android:icon="@drawable/ic_hub"
            android:title="@string/hub_hub"/>
        <item
            android:id="@+id/nav_locate"
            android:icon="@drawable/ic_locate"
            android:title="@string/locate_locate"/>
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_project"
            android:title="@string/project_project"/>
        <item
            android:id="@+id/nav_sub"
            android:icon="@drawable/ic_sub"
            android:title="@string/sub_sub"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_help"/>
    </group>
</menu>