<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userCenterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="149dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_usercenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:id="@+id/iv_usericon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_username"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_userpoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/user_points"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bt_userlike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/user_like"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bt_userarticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/user_article"
            android:textAlignment="textStart"
            android:textColor="#000000"
            app:iconTint="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_userlogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:insetTop="0dp"
                android:text="@string/user_logout"
                android:textColor="#DD0000"
                android:textStyle="bold"
                app:iconTint="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>